--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <!-- Nav Section -->
+
     <nav>
         <div class="container navbar">
             <div class="logoContainer">
@@ -19,6 +21,8 @@
             </div>
         </div>
     </nav>
+
+    <!-- Theme Page -->
 
     <div class="container">
         <div class="mainPage">
@@ -66,11 +70,13 @@
         </div>
     </div>
 
+    <!-- Menu section -->
+
     <div class="container">
         <div class="menuBar">
           <div class="menuContent">
             <button class="menuButton">Our Menu</button>
-            <h2 class="menuDirection">Explore our Menu</h2>
+            <h2 class="menuDirection">Explore our Menu</h2>      
          
           
             <div class="gridContainer">
@@ -101,6 +107,8 @@
          </div> 
         </div>
     </div>
+
+    <!-- Footer Section -->
 
     <div class="footer">
         <div class="footerSection">
